# bazel-lib

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .shellcheckrc  .typos.toml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  bzl_library.bzl  configure.bat  deps.bzl  go.mod  go.sum  internal_deps.bzl  renovate.json  skylib.patch  test.py  version.bzl  workspace_status.sh
.aspect/workflows/: BUILD.bazel  README.md  bazelrc  config.yaml  deps.bzl
.aspect/workflows/terraform/: README.md  main.tf  workflows.tf
.circleci/: BUILD.bazel  config.yml  user-config.yml
docs/: .bazelrc  BUILD.bazel  MODULE.bazel  base64.md  bats.md  bazelrc_presets.md  copy_directory.md  copy_file.md  copy_to_bin.md  copy_to_directory.md  default_info_files.md  diff_test.md  directory_path.md  docs.md  executable_test.md  expand_make_vars.md  expand_template.md  extension_utils.md  glob_match.md  host_repo.md  jq.md  lists.md  output_filegroup.md  output_files.md  params_file.md  paths.md  repo_utils.md  repositories.md  resource_sets.md  run_binary.md  semver.md  stamping.md  starlark_codegen_utils.md  strings.md  tar.md  testing.md  transitions.md  utils.md  wrap_binary.md  write_source_files.md  (+1 more)
docs/templates/: BUILD.bazel  func_html.vm  rule_body.vm  rule_html.vm
e2e/api_entries/: BUILD.bazel  MODULE.bazel  WORKSPACE
e2e/bzlmod/: .bazelrc  BUILD.bazel  MODULE.bazel  defs.bzl  docs.md
e2e/bzlmod/.aspect/: bazelrc
e2e/bzlmod_coreutils/: BUILD.bazel  MODULE.bazel  sha256.txt
e2e/copy_to_directory/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE
e2e/coreutils/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  md5.txt  sha1.txt
e2e/smoke/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  basic.bats  test_preserve_mtime.go  test_preserve_mtime.sh  testdata_mtree.spec.golden
e2e/smoke/.aspect/: cli
e2e/workspace/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel
e2e/write_source_files/: BUILD.bazel  MODULE.bazel  WORKSPACE  test_extension.bzl
lib/: BUILD.bazel  base64.bzl  bats.bzl  bazelrc_presets.bzl  binary_toolchain.bzl  copy_directory.bzl  copy_file.bzl  copy_to_bin.bzl  copy_to_directory.bzl  default_info_files.bzl  diff_test.bzl  directory_path.bzl  executable_test.bzl  expand_make_vars.bzl  expand_template.bzl  extension_utils.bzl  extensions.bzl  glob_match.bzl  jq.bzl  lists.bzl  output_filegroup.bzl  output_files.bzl  params_file.bzl  paths.bzl  repo_utils.bzl  repositories.bzl  resource_sets.bzl  semver.bzl  stamping.bzl  starlark_codegen_utils.bzl  string.bzl  strings.bzl  tar.bzl  testing.bzl  toolchains.bzl  transitions.bzl  utils.bzl  windows_utils.bzl  wrap_binary.bzl  write_source_files.bzl  (+1 more)
lib/private/: BUILD.bazel  base64.bzl  base64.py  bats.bzl  bats_toolchain.bzl  copy_common.bzl  copy_directory.bzl  copy_directory_toolchain.bzl  copy_file.bzl  copy_to_bin.bzl  copy_to_directory.bzl  copy_to_directory_toolchain.bzl  coreutils_toolchain.bzl  default_info_files.bzl  diff_test.bzl  diff_test_tmpl.bat  diff_test_tmpl.sh  diff_test_toolchain.bzl  directory_path.bzl  docs.bzl  executable_test.bzl  executable_test_tmpl.bat  executable_test_tmpl.sh  expand_locations.bzl  expand_make_vars.bzl  expand_template.bzl  expand_template_toolchain.bzl  expand_variables.bzl  extension_utils.bzl  glob_match.bzl  host_repo.bzl  jq.bzl  jq_toolchain.bzl  lists.bzl  local_config_platform.bzl  modify_mtree.awk  output_filegroup.bzl  output_files.bzl  params_file.bzl  parse_status_file.jq  (+33 more)
lib/private/docs/: BUILD.bazel
lib/private/gen_vis_scripts/: BUILD.bazel  gen_vis_scripts.go
lib/tests/: BUILD.bazel  README.md  base64_tests.bzl  default_output_gen.bzl  expand_make_vars_test.bzl  extension_utils_test.bzl  generate_outputs.bzl  glob_match_test.bzl  lists_test.bzl  paths_test.bzl  resource_sets_tests.bzl  semver_test.bzl  string_tests.bzl  strings_tests.bzl  test.bat  test.sh  test_with_run.bat  test_with_run.sh  utils_test.bzl  vis_encoding.bats
lib/tests/assert_archive_contains/: BUILD.bazel  bazel_runfiles.whl  expected_tar.txt  expected_wheel.txt  lib_tests.tar
lib/tests/assert_contains/: BUILD.bazel  case1.txt
lib/tests/assert_directory_contains/: BUILD.bazel
lib/tests/bats/: BUILD.bazel  additional_lib.bats  basic.bats  env.bats  env_expansion.bats
lib/tests/bazelrc_presets/: BUILD.bazel
lib/tests/check_newlines/: BUILD.bazel  main.go
lib/tests/copy_directory/: BUILD.bazel
lib/tests/copy_directory_bin_action/: BUILD.bazel  pkg.bzl
lib/tests/copy_file/: BUILD.bazel
lib/tests/copy_to_bin/: BUILD.bazel
lib/tests/copy_to_directory/: BUILD.bazel  case6.sh
lib/tests/copy_to_directory_action/: BUILD.bazel  lib.bzl  other_info.bzl  pkg.bzl
lib/tests/copy_to_directory_bin_action/: BUILD.bazel  lib.bzl  pkg.bzl
lib/tests/coreutils/: BUILD.bazel
lib/tests/diff_test/: BUILD.bazel  verify_bat_crlf.sh
lib/tests/expand_template/: BUILD.bazel  a.tmpl  a_expected  a_expected_bzlmod  a_stamp_expected  a_stamp_expected_bzlmod  index.html
tools/: BUILD.bazel  coreutils_mirror_release.sh  create_release.sh  create_versions.sh  hashes.bzl  integrity.bzl  release.bzl  source_toolchain.bzl  sri.bzl  version.bzl  versions.bzl  yq_mirror_release.sh
tools/common/: BUILD.bazel  clonefile_darwin.go  clonefile_linux.go  clonefile_stub.go  copy.go  file.go  stamp.go  version.go  waiting_group.go  walker.go
tools/copy_directory/: BUILD.bazel  main.go  mirror_release.sh
tools/copy_to_directory/: BUILD.bazel  main.go  mirror_release.sh  stamp.go
tools/expand_template/: BUILD.bazel  main.go  mirror_release.sh
tools/format/: BUILD.bazel  noop.sh
tools/gen_vis_scripts/: gen_vis_scripts.go
tools/mtree/: BUILD.bazel  main.go
tools/release/: BUILD.bazel  copy_release_artifacts.sh  hashes.bzl  release.bzl
tools/run_binary/: BUILD.bazel  main.go
tools/sha256sum/: BUILD.bazel  main.go
tools/spawn_binary/: BUILD.bazel  main.go  parse_test.go  run_unix_test.go  signals_unix.go  signals_windows.go
tools/write_source_files/: BUILD.bazel  main.go
(+177 files in other folders)
