# These loads are in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    bzl_library_target = "//lib:copy_to_directory",
    out_label = "//docs:copy_to_directory.md",
)

stardoc_with_diff_test(
    bzl_library_target = "//lib:docs",
    out_label = "//docs:docs.md",
)

stardoc_with_diff_test(
    bzl_library_target = "//lib:expand_make_vars",
    out_label = "//docs:expand_make_vars.md",
)

stardoc_with_diff_test(
    bzl_library_target = "//lib:params_file",
    func_template = "//docs/templates:func_html.vm",
    out_label = "//docs:params_file.md",
)

stardoc_with_diff_test(
    bzl_library_target = "//lib:paths",
    out_label = "//docs:paths.md",
)

stardoc_with_diff_test(
    bzl_library_target = "//lib:utils",
    out_label = "//docs:utils.md",
)

stardoc_with_diff_test(
    bzl_library_target = "//lib:jq",
    out_label = "//docs:jq.md",
)

stardoc_with_diff_test(
    bzl_library_target = "//lib:write_source_files",
    out_label = "//docs:write_source_files.md",
)

stardoc_with_diff_test(
    bzl_library_target = "//lib:directory_path",
    out_label = "//docs:directory_path.md",
)

update_docs(
    name = "update",
    docs_folder = "docs",
)
