# These loads are in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "copy_to_directory",
    bzl_library_target = "//lib:copy_to_directory",
)

stardoc_with_diff_test(
    name = "docs",
    bzl_library_target = "//lib:docs",
)

stardoc_with_diff_test(
    name = "expand_make_vars",
    bzl_library_target = "//lib:expand_make_vars",
)

stardoc_with_diff_test(
    name = "params_file",
    bzl_library_target = "//lib:params_file",
    func_template = "//docs/templates:func_html.vm",
)

stardoc_with_diff_test(
    name = "paths",
    bzl_library_target = "//lib:paths",
)

stardoc_with_diff_test(
    name = "utils",
    bzl_library_target = "//lib:utils",
)

stardoc_with_diff_test(
    name = "jq",
    bzl_library_target = "//lib:jq",
)

stardoc_with_diff_test(
    name = "write_source_files",
    bzl_library_target = "//lib:write_source_files",
)

stardoc_with_diff_test(
    name = "directory_path",
    bzl_library_target = "//lib:directory_path",
)

stardoc_with_diff_test(
    name = "output_files",
    bzl_library_target = "//lib:output_files",
)

update_docs()
