load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = [
        "//docs:__pkg__",
        "//lib:__subpackages__",
    ],
)

bzl_library(
    name = "docs",
    srcs = ["docs.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//lib/private:docs"],
)

bzl_library(
    name = "expand_make_vars",
    srcs = ["expand_make_vars.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//lib/private:expand_make_vars"],
)

bzl_library(
    name = "params_file",
    srcs = ["params_file.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//lib/private:params_file"],
)

bzl_library(
    name = "paths",
    srcs = ["paths.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//lib/private:paths"],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//lib/private:utils"],
)

bzl_library(
    name = "windows_utils",
    srcs = ["windows_utils.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "jq",
    srcs = ["jq.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//lib/private:jq"],
)

bzl_library(
    name = "directory_path",
    srcs = ["directory_path.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//lib/private:directory_path"],
)

bzl_library(
    name = "copy_to_directory",
    srcs = ["copy_to_directory.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//lib/private:copy_to_directory"],
)

toolchain_type(
    name = "jq_toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "write_source_files",
    srcs = ["write_source_files.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":utils",
        "//lib/private:fail_with_message_test",
        "//lib/private:write_source_files",
        "@bazel_skylib//rules:diff_test",
    ],
)
