load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//lib:utils.bzl", "is_bazel_6_or_greater")
load("//lib:write_source_files.bzl", "write_source_files")

exports_files([
    "create_release.sh",
    "create_version.sh",
])

write_source_files(
    name = "releases_versions_check_in",
    files = {
        "integrity.bzl": "//tools/release:release_versions",
    },
    tags = (["manual"] if not is_bazel_6_or_greater() else []),
)

bzl_library(
    name = "integrity",
    srcs = ["integrity.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    visibility = ["//visibility:public"],
)
