load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "create_release.sh",
    "create_version.sh",
])

bzl_library(
    name = "integrity",
    srcs = ["integrity.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    visibility = ["//visibility:public"],
)
