load("@bazel_skylib//rules:build_test.bzl", "build_test")

# Ensure all lib:* bzl_target libraries can be loaded from a MODULE
# Targets from: `bazel query "kind('bzl_library', //lib:*)"`
build_test(
    name = "api_bzl_entries",
    targets = [
        "@bazel_lib//lib:base64",
        "@bazel_lib//lib:bats",
        "@bazel_lib//lib:bats_toolchain_type",
        "@bazel_lib//lib:bzlmod",
        "@bazel_lib//lib:copy_directory",
        "@bazel_lib//lib:copy_directory_toolchain_type",
        "@bazel_lib//lib:copy_file",
        "@bazel_lib//lib:copy_to_bin",
        "@bazel_lib//lib:copy_to_directory",
        "@bazel_lib//lib:copy_to_directory_toolchain_type",
        "@bazel_lib//lib:coreutils_toolchain_type",
        "@bazel_lib//lib:diff_test",
        "@bazel_lib//lib:directory_path",
        "@bazel_lib//lib:enable_runfiles",
        "@bazel_lib//lib:expand_make_vars",
        "@bazel_lib//lib:expand_template",
        "@bazel_lib//lib:expand_template_toolchain_type",
        "@bazel_lib//lib:extensions",
        "@bazel_lib//lib:flag_bzlmod",
        "@bazel_lib//lib:glob_match",
        "@bazel_lib//lib:host_repo",
        "@bazel_lib//lib:lists",
        "@bazel_lib//lib:output_files",
        "@bazel_lib//lib:params_file",
        "@bazel_lib//lib:paths",
        "@bazel_lib//lib:platform_utils",
        "@bazel_lib//lib:repo_utils",
        "@bazel_lib//lib:repositories",
        "@bazel_lib//lib:resource_sets",
        "@bazel_lib//lib:run_binary",
        "@bazel_lib//lib:stamp",
        "@bazel_lib//lib:stamp_detect",
        "@bazel_lib//lib:stamping",
        "@bazel_lib//lib:strings",
        "@bazel_lib//lib:testing",
        "@bazel_lib//lib:transitions",
        "@bazel_lib//lib:utils",
        "@bazel_lib//lib:windows_utils",
        "@bazel_lib//lib:write_source_files",
        "@bazel_lib//lib:zstd_toolchain_type",
    ],
)
