module(
    name = "e2e_bzlmod",
    compatibility_level = 1,
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.1.1")

bazel_dep(name = "aspect_bazel_lib", version = "0.0.0")

local_path_override(
    module_name = "aspect_bazel_lib",
    path = "../..",
)

http = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "http")

http.http_archive(
    name = "bazel_lib_srcs",
    build_file_content = """exports_files(["README.md"])""",
    sha256 = "79623d656aa23ad3fd4692ab99786c613cd36e49f5566469ed97bc9b4c655f03",
    strip_prefix = "bazel-lib-1.23.3",
    urls = ["https://github.com/aspect-build/bazel-lib/archive/refs/tags/v1.23.3.tar.gz"],
)

use_repo(http, "bazel_lib_srcs")
