module(
    name = "e2e_bzlmod",
    compatibility_level = 1,
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.1.1")

bazel_dep(name = "aspect_bazel_lib", version = "0.0.0")

local_path_override(
    module_name = "aspect_bazel_lib",
    path = "../..",
)

ext = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "ext")

ext.host()

use_repo(ext, "aspect_bazel_lib_host")
