load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

genrule(
    name = "ls",
    outs = ["ls.txt"],
    cmd = "$(COREUTILS_BIN) ls > $@",
    toolchains = ["@coreutils_toolchains//:resolved_toolchain"],
)

# This tests that the "in" file to write_source_files can be a
# label to an external repository target when bzlmod is enabled.
write_source_files(
    name = "write_ls",
    files = {
        "ls.txt.expected": ":ls.txt",
    },
)

