bazel_dep(name = "bazel_lib", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "bazel_lib",
    path = "../..",
)

bazel_lib_toolchains = use_extension("@bazel_lib//lib:extensions.bzl", "toolchains", dev_dependency = True)
use_repo(bazel_lib_toolchains, "coreutils_toolchains")

bazel_dep(name = "platforms", version = "0.0.10")
